# python-uv-template

./: .editorconfig  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO.md  flake.nix  pyproject.toml
data/: .gitignore
logs/: .gitignore
scripts/: rename-package.sh
src/app/: __init__.py  environment_settings.py  main.py
tests/: README.md
tests/benchmarks/: example_benchmark.py
tests/unit_tests/: test_example.py
